--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="Press start to play and fight Whales, DIPS and FUD">
-  <meta name="twitter:title" content="Moonshooter">
+  <meta name="twitter:title" content="Ra8bits">
   <meta name="twitter:image" content="/img/moonshot-logo.png">
   <meta name="twitter:site" content="@RS25Moonshot">
 
-  <meta property="og:title" content="Project Moonshot" />
-  <meta property="og:site_name" content="Moonshot"/>
-  <meta property="og:description" content="Moonshooter" />
+  <meta property="og:title" content="Ra8bits" />
+  <meta property="og:site_name" content="Ra8bits"/>
+  <meta property="og:description" content="Ra8bits" />
   <meta property="og:image" content="https://project-moonshot.me/img/moonshot-logo.png" />
 
   <link rel="stylesheet" href="css/game-min.css">
@@ -58,7 +58,7 @@
 
 <div class="dialogue">
   <div class="dialogue__content">
-    <h2>Moonshooter</h2>
+    <h2>Ra8bits</h2>
     <div class="spacer-small"></div>
     <ul>
       <li>Only for device that has cursor keys.</li>
